force-app/main/default/objects/Candidate_Comment_on_list__c/Candidate_Comment_on_list__c.object-meta.xml
<CustomObject>
    <label>Candidate Comment on list</label>
    <nameField>
        <label>Candidate Comment on list Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Candidate Comment on lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>