force-app/main/default/objects/Candidate_Comment_on_list__c/fields/Kandidat_p_liste__c.field-meta.xml
<CustomField>
    <fullName>Kandidat_p_liste__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Kandidat på liste</label>
    <referenceTo>Candidate_on_list__c</referenceTo>
    <relationshipLabel>Candidate Comment on lists</relationshipLabel>
    <relationshipName>Candidate_Comment_on_lists</relationshipName>
    <type>Lookup</type>
</CustomField>