force-app/main/default/objects/Candidate_Comment_on_list__c/fields/RemoveCommentFromPdf__c.field-meta.xml
<CustomField>
    <fullName>RemoveCommentFromPdf__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remove Comment From Pdf</label>
    <type>Checkbox</type>
</CustomField>