force-app/main/default/objects/Candidate_Comment_on_list__c/fields/X18_Digit_Id__c.field-meta.xml
<CustomField>
    <fullName>X18_Digit_Id__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>18 Digit Id</label>
    <type>Text</type>
</CustomField>